5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1590_2895.log
== TEST (2019-03-20 15:35:56) 
-- CODE:
Jogos = float(input("quantidades de jogos a serem encomendados"))
valor = float(input("o valor unitario de cada jogo"))
frete = float(input("O valor do frete"))
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:36:00) 
-- CODE:
Jogos = float(input("quantidades de jogos a serem encomendados"))
valor = float(input("o valor unitario de cada jogo"))
frete = float(input("O valor do frete"))
-- EXECUTION TIME:
0.171687
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:36:24) 
-- CODE:
Jogos = input("quantidades de jogos a serem encomendados"))
valor = input("o valor unitario de cada jogo"))
frete = input("O valor do frete"))
-- ERROR:
File "XXXX", line 1
    Jogos = input())
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:37:14) 
-- CODE:
print(Jogos = input("quantidades de jogos a serem encomendados"))
print(valor = input("o valor unitario de cada jogo"))
print(frete = input("O valor do frete"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(Jogos = input())
TypeError: 'Jogos' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:37:17) 
-- CODE:
print(Jogos = input("quantidades de jogos a serem encomendados"))
print(valor = input("o valor unitario de cada jogo"))
print(frete = input("O valor do frete"))
-- EXECUTION TIME:
0.141099
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 1, in <module>
    print(Jogos = input())
TypeError: 'Jogos' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:39:31) 
-- CODE:
print(Jogos = floata(input("quantidades de jogos a serem encomendados"))
print(valor = float(input("o valor unitario de cada jogo"))
print(frete = float(input("O valor do frete"))
-- ERROR:
File "XXXX", line 2
    print(valor = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:39:42) 
-- CODE:
print(Jogos = float(input("quantidades de jogos a serem encomendados"))
print(valor = float(input("o valor unitario de cada jogo"))
print(frete = float(input("O valor do frete"))
-- ERROR:
File "XXXX", line 2
    print(valor = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:39:44) 
-- CODE:
print(Jogos = float(input("quantidades de jogos a serem encomendados"))
print(valor = float(input("o valor unitario de cada jogo"))
print(frete = float(input("O valor do frete"))
-- EXECUTION TIME:
0.171353
-- ERROR:
  File "/home/codebench/codes/1590/2895/main.py", line 2
    print(valor = float(input())
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:40:13) 
-- CODE:
print(Jogos = float(input("quantidades de jogos a serem encomendados"))
print(valor = float(input("o valor unitario de cada jogo"))
print(frete = float(input("O valor do frete"))
		print(total)
-- ERROR:
File "XXXX", line 2
    print(valor = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:40:52) 
-- CODE:
print(Jogos = float(input("quantidades de jogos a serem encomendados"))
print(valor = float(input("o valor unitario de cada jogo"))
print(frete = float(input("O valor do frete"))
print(total)
-- ERROR:
File "XXXX", line 2
    print(valor = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:41:50) 
-- CODE:
print(Jogos =input("quantidades de jogos a serem encomendados"))
print(valor =input("o valor unitario de cada jogo"))
print(frete =(input("O valor do frete"))
print(total)
-- ERROR:
File "XXXX", line 4
    print(total)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:42:14) 
-- CODE:
print(Jogos =input("quantidades de jogos a serem encomendados"))
print(valor =input("o valor unitario"))
print(frete =(input("O valor do frete"))
print(total)
-- ERROR:
File "XXXX", line 4
    print(total)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:49:56) 
-- CODE:
quantidade = int(float(input("a quantidade de jogos a serem encomendados")))
valor = int(float(input("o valor unitario de cada frete")))
frete = int(float(input("o valor do frete")))
print(total
	  )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(total
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:50:05) 
-- CODE:
quantidade = int(float(input("a quantidade de jogos a serem encomendados")))
valor = int(float(input("o valor unitario de cada frete")))
frete = int(float(input("o valor do frete")))
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:50:08) 
-- CODE:
quantidade = int(float(input("a quantidade de jogos a serem encomendados")))
valor = int(float(input("o valor unitario de cada frete")))
frete = int(float(input("o valor do frete")))
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:50:12) 
-- CODE:
quantidade = int(float(input("a quantidade de jogos a serem encomendados")))
valor = int(float(input("o valor unitario de cada frete")))
frete = int(float(input("o valor do frete")))
print(total)
-- EXECUTION TIME:
0.13711
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 4, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:51:42) 
-- CODE:
quantidade = int(float(input("a quantidade de jogos a serem encomendados")))
valor = int(float(input("o valor unitario de cada frete")))
frete = int(float(input("o valor do frete")))
total = (quantidade* valor unitario) + frete
print(total)
-- ERROR:
File "XXXX", line 4
    total = (quantidade* valor unitario) + frete
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 16:08:52) 
-- CODE:
quantidade = int(float(input("a quantidade de jogos a serem encomendadas")
print(quantidade)
-- ERROR:
File "XXXX", line 2
    print(quantidade)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 16:33:22) 
-- CODE:
quantidade = int(input("qual a quantidade de jogos encomendados?"))
valor unitario = float(input("qual o valor unitario?"))
frete = float(input("qual o valor do frete?"))
total = float(quantidade*valor unitario + frete)
print(float(total))
-- ERROR:
File "XXXX", line 2
    valor unitario = float(input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 16:33:41) 
-- CODE:
quantidade = int(input("qual a quantidade de jogos encomendados?"))
valor = float(input("qual o valor unitario?"))
frete = float(input("qual o valor do frete?"))
total = float(quantidade*valor + frete)
print(float(total))
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 16:33:53) 
-- CODE:
quantidade = int(input("qual a quantidade de jogos encomendados?"))
valor = float(input("qual o valor unitario?"))
frete = float(input("qual o valor do frete?"))
total = float(quantidade*valor + frete)
print(float(total))
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 16:34:30) 
-- CODE:
quantidade = int(input("qual a quantidade de jogos encomendados?"))
valor = float(input("qual o valor unitario?"))
frete = float(input("qual o valor do frete?"))
total = float(quantidade*valor + frete)
print(float(total))
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 16:35:15) 
-- CODE:
quantidade = int(input("qual a quantidade de jogos encomendados?"))
valor = float(input("qual o valor unitario?"))
frete = float(input("qual o valor do frete?"))
total = float((quantidade*valor) + frete)
print(float(total))
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 16:35:33) 
-- CODE:
quantidade = int(input("qual a quantidade de jogos encomendados?"))
valor = float(input("qual o valor unitario?"))
frete = float(input("qual o valor do frete?"))
total = float((quantidade*valor) + frete)
print(float(total))
-- EXECUTION TIME:
0.143681
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:22:51) 
-- CODE:
x = int(input("qual a quantidade de jogos encomendados?"))
y = float(input("qual o valor unitario de cada jogo?"))
z = float(input("qual o valor do frete?"))
print(x*y + z)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:23:03) 
-- CODE:
x = int(input("qual a quantidade de jogos encomendados?"))
y = float(input("qual o valor unitario de cada jogo?"))
z = float(input("qual o valor do frete?"))
print(x*y + z)
-- EXECUTION TIME:
0.154092
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
